# gaem

./: meson.build
src/: Game.cpp  Game.hpp  Resources.cpp  Resources.hpp  resources.cpp
src/assets/: Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
src/states/: PlayState.cpp  PlayState.hpp  State.cpp  State.hpp
